Updating to use settings_local.py instead of settings.py in the project root directory due to namespace collision.

--- a/torn/manage/structure/templates/index.htm
+++ b/torn/manage/structure/templates/index.htm
@@ -41,8 +41,8 @@
 		<p class="detail">This file contains all of
 		the default application settings. Any new settings should be
 		entered here. However, if you are needing to override the
-		default settings, you should create a <code>settings.py</code> file in 
-		the root directory with a "settings" dictionary. That 
+		default settings, you should create a <code>settings_local.py</code> 
+		file in the root directory with a "settings" dictionary. That 
 		will automatically override any default settings in 
 		<code>app/settings.py</code>.</p>
 	</li>
